# mkdocs-pre-gen

./: README.md  pyproject.toml  tox.ini
mkdocs_pre_gen/: plugin.py
tests/: test_plugin.py
tests/fixtures/: test_mkdocs_conf.yml
